--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
   </nav>
   <hr>
   <br>
-  <h3>Điểm số: {{ point }} / 30</h3>
+  <h3>Điểm số:</h3>
+  <p id='point'></p>
   <br>
   <hr>
   <div class="panel panel-warning">
     <div class="panel-heading">
       <h3 class="panel-title">HỎI</h3>
     </div>
-    <div class="panel-body"> <h2>{{ question }}</h2> </div>
+    <div class="panel-body"> <h2 id='question'></h2> </div>
   </div>
   <hr>
   <div class="row">
